examples/good/04-print.oo
print("Print is used in most of examples :)");
