examples/bad/if-int.oo
if (2 + 2) print("2+2 is true");
